--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
-    <header class="header">
+    <!--header class="header">
         <div class="header-container container">
             <nav class="header-nav">
                 <a href="" lang="en" class="logo">Web<span lang="en" class="logo logo__studio">Studio</span>
@@ -148,7 +148,7 @@
             </div>
         </section>
         <!--Чем мы занимаемся-->
-        <section class="about section">
+        <!--section class="about section">
             <div class="container">
                 <h2 class="about__title section__title">Чем мы занимаемся</h2>
                 <ul class="about-list list">
@@ -183,7 +183,7 @@
             </div>
         </section>
         <!--Наша команда-->
-        <section class="team section">
+        <!--section class="team section">
             <div class="container">
                 <h2 class="team__title section__title">Наша команда</h2>
                 <ul class="team-list list">
@@ -343,7 +343,7 @@
             </div>
         </section>
         <!--Постоянные клиенты-->
-        <section class="clients section">
+        <!--section class="clients section">
             <div class="container">
                 <h2 class="clients__title section__title">Постоянные клиенты</h2>
                 <ul class="client-list list">
@@ -466,6 +466,7 @@
             </form>
         </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 </html>
