--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
         </section>
         <!--Чем мы занимаемся-->
-        <!--section class="about section">
+        <section class="about section">
             <div class="container">
                 <h2 class="about__title section__title">Чем мы занимаемся</h2>
                 <ul class="about-list list">
@@ -465,7 +465,7 @@
                 </div>
             </form>
         </div>
-    </footer>
+    </footer-->
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
