Выполняет адаптивную вёрстку

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
         </section>
         <!--Наша команда-->
-        <!--section class="team section">
+        <section class="team section">
             <div class="container">
                 <h2 class="team__title section__title">Наша команда</h2>
                 <ul class="team-list list">
@@ -343,7 +343,7 @@
             </div>
         </section>
         <!--Постоянные клиенты-->
-        <!--section class="clients section">
+        <section class="clients section">
             <div class="container">
                 <h2 class="clients__title section__title">Постоянные клиенты</h2>
                 <ul class="client-list list">
@@ -466,7 +466,7 @@
             </form>
         </div>
     </footer-->
-    <script src="./js/mobile-menu.js"></script>
+    <!--script src="./js/mobile-menu.js"></script-->
     <script src="./js/modal.js"></script>
 </body>
 </html>
