--- a/index.html
+++ b/index.html
@@ -15,18 +15,29 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 <body>
-    <!--header class="header">
+    <header class="header">
         <div class="header-container container">
             <nav class="header-nav">
                 <a href="" lang="en" class="logo">Web<span lang="en" class="logo logo__studio">Studio</span>
                 </a>
-                <ul class="site-nav list">
+                <button type="button" class="menu-button is-open" 
+                data-menu-button>
+                    <svg 
+                        width="40" 
+                        height="40" 
+                        aria-label="Переключатель мобильного меню"
+                        >
+                        <use class="menu-button__icon menu-button__icon-cross" href="./images/icons.svg#cross"></use>
+                        <use class="menu-button__icon menu-button__icon-menu" href="./images/icons.svg#menu"></use>
+                    </svg>
+                </button>
+                <!--ul class="site-nav list">
                     <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a></li>
                     <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфолио</a></li>
                     <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
-                </ul>
+                </ul-->
             </nav>
-            <ul class="header-contact list">
+            <!--ul class="header-contact list">
                 <li class="header-contact__item">
                     <a href="mailto:info@devstudio.com" class="header-contact__link-mail">
                     <svg class="header-contact__icon-mail" width="16" height="12">
@@ -41,7 +52,7 @@
                     </svg>
                     +38 096 111 11 11</a>
                 </li>
-            </ul>
+            </ul-->
         </div>
     </header>
     <main>
@@ -466,7 +477,7 @@
             </form>
         </div>
     </footer-->
-    <!--script src="./js/mobile-menu.js"></script-->
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 </html>
