--- a/index.html
+++ b/index.html
@@ -22,28 +22,27 @@
                 </a>
                 <button 
                 type="button" 
-                class="menu-button is-open" 
+                class="menu-button" 
                 aria-expended="false" 
                 aria-controls="menu-container"
                 data-menu-button>
-                    <svg 
+                    <svg
                         width="40" 
                         height="40" 
-                        aria-label="Переключатель мобильного меню"
-                        >
+                        aria-label="Переключатель мобильного меню">
                         <use class="menu-button__icon menu-button__icon-cross" href="./images/icons.svg#cross"></use>
                         <use class="menu-button__icon menu-button__icon-menu" href="./images/icons.svg#menu"></use>
                     </svg>
                 </button>
-                <div 
-                lass="menu-container is-open" 
-                id="menu-container" 
+                <div
+                class="menu-container"
+                id="menu-container"
                 data-menu>
-                <ul class="site-nav list">
+                    <ul class="site-nav list">
                     <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a></li>
                     <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфолио</a></li>
                     <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
-                </ul>
+                </ul-->
             </div>
             </nav>
             <!--ul class="header-contact list">
