--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <ul class="header-contact list">
                         <li class="header-contact__item">
                             <a href="mailto:info@devstudio.com" class="header-contact__link-mail">
-                                <svg class="header-contact__icon-mail" width="16" height="12">
+                                <svg class="header-contact__icon-mail">
                                     <use href="./images/icons.svg#mail"></use>
                                 </svg> 
                                 info@devstudio.com
@@ -54,7 +54,7 @@
                         </li>
                         <li class="header-contact__item">
                             <a href="tel:+380961111111" class="header-contact__link-tel">
-                                <svg class="header-contact__icon-tel" width="10" height="16">
+                                <svg class="header-contact__icon-tel">
                                     <use href="./images/icons.svg#tel"></use>
                                 </svg>
                                 +38 096 111 11 11
