--- a/portfolio.html
+++ b/portfolio.html
@@ -20,28 +20,54 @@
             <nav class="header-nav">
                 <a href="" lang="en" class="logo">Web<span lang="en" class="logo logo__studio">Studio</span>
                 </a>
-                <ul class="site-nav list">
-                    <li class="site-nav__item"><a href="./index.html" class="site-nav__link">Студия</a></li>
-                    <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфолио</a></li>
-                    <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
-                </ul>
+                <button type="button" class="menu-button" aria-expended="false" aria-controls="menu-container"
+                    data-menu-button>
+                    <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+                        <use class="menu-button__icon menu-button__icon-cross" href="./images/icons.svg#cross"></use>
+                        <use class="menu-button__icon menu-button__icon-menu" href="./images/icons.svg#menu"></use>
+                    </svg>
+                </button>
+                <div class="menu-container" id="menu-container" data-menu>
+                    <ul class="site-nav list">
+                        <li class="site-nav__item"><a href="./index.html"
+                                class="site-nav__link">Студия</a></li>
+                        <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфолио</a></li>
+                        <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
+                    </ul>
+                    <ul class="header-contact list">
+                        <li class="header-contact__item">
+                            <a href="mailto:info@devstudio.com" class="header-contact__link-mail">
+                                <svg class="header-contact__icon-mail">
+                                    <use href="./images/icons.svg#mail"></use>
+                                </svg>
+                                info@devstudio.com
+                            </a>
+                        </li>
+                        <li class="header-contact__item">
+                            <a href="tel:+380961111111" class="header-contact__link-tel">
+                                <svg class="header-contact__icon-tel">
+                                    <use href="./images/icons.svg#tel"></use>
+                                </svg>
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="social-contact list">
+                        <li class="social-contact__item">
+                            <a href="" class="social-contact__link" lang="en">Instagram</a>
+                        </li>
+                        <li class="social-contact__item">
+                            <a href="" class="social-contact__link" lang="en">Twitter</a>
+                        </li>
+                        <li class="social-contact__item">
+                            <a href="" class="social-contact__link" lang="en">Facebook</a>
+                        </li>
+                        <li class="social-contact__item">
+                            <a href="" class="social-contact__link" lang="en">LinkedIn</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>
-            <ul class="header-contact list">
-                <li class="header-contact__item">
-                    <a href="mailto:info@devstudio.com" class="header-contact__link-mail">
-                        <svg class="header-contact__icon-mail" width="16" height="12">
-                            <use href="./images/icons.svg#mail"></use>
-                        </svg>
-                        info@devstudio.com</a>
-                </li>
-                <li class="header-contact__item">
-                    <a href="tel:+380961111111" class="header-contact__link-tel">
-                        <svg class="header-contact__icon-tel" width="10" height="16">
-                            <use href="./images/icons.svg#tel"></use>
-                        </svg>
-                        +38 096 111 11 11</a>
-                </li>
-            </ul>
         </div>
     </header>
     <main>
@@ -309,5 +335,7 @@
             </form>
         </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
