--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <nav class="header-nav">
                 <a href="" lang="en" class="logo">Web<span lang="en" class="logo logo__studio">Studio</span>
                 </a>
-                <button 
-                type="button" 
-                class="menu-button" 
-                aria-expended="false" 
-                aria-controls="menu-container"
-                data-menu-button>
+                <button
+                    type="button" 
+                    class="menu-button" 
+                    aria-expanded="false" 
+                    aria-controls="menu-container"
+                    data-menu-button>
                     <svg
                         width="40" 
                         height="40" 
@@ -584,7 +584,7 @@
                 </div>
             </form>
         </div>
-    </footer-->
+    </footer>
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
