--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,11 @@
             <nav class="header-nav">
                 <a href="" lang="en" class="logo">Web<span lang="en" class="logo logo__studio">Studio</span>
                 </a>
-                <button type="button" class="menu-button" aria-expended="false" aria-controls="menu-container"
+                <button 
+                    type="button" 
+                    class="menu-button" 
+                    aria-expanded="false" 
+                    aria-controls="menu-container"
                     data-menu-button>
                     <svg width="40" height="40" aria-label="Переключатель мобильного меню">
                         <use class="menu-button__icon menu-button__icon-cross" href="./images/icons.svg#cross"></use>
