Выполняет адаптивную верстку

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                     <li class="client-list__item">
                         <a href="" class="client-list__link">
                             <svg class="client-list__icon" width="106" height="60">
-                                <use href="./mages/icons.svg#client5"></use>
+                                <use href="./images/icons.svg#client5"></use>
                             </svg>
                         </a>
                     </li>
