--- a/portfolio.html
+++ b/portfolio.html
@@ -38,38 +38,40 @@
                         <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфолио</a></li>
                         <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
                     </ul>
-                    <ul class="header-contact list">
-                        <li class="header-contact__item">
-                            <a href="mailto:info@devstudio.com" class="header-contact__link-mail">
-                                <svg class="header-contact__icon-mail">
-                                    <use href="./images/icons.svg#mail"></use>
-                                </svg>
-                                info@devstudio.com
-                            </a>
-                        </li>
-                        <li class="header-contact__item">
-                            <a href="tel:+380961111111" class="header-contact__link-tel">
-                                <svg class="header-contact__icon-tel">
-                                    <use href="./images/icons.svg#tel"></use>
-                                </svg>
-                                +38 096 111 11 11
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="social-contact list">
-                        <li class="social-contact__item">
-                            <a href="" class="social-contact__link" lang="en">Instagram</a>
-                        </li>
-                        <li class="social-contact__item">
-                            <a href="" class="social-contact__link" lang="en">Twitter</a>
-                        </li>
-                        <li class="social-contact__item">
-                            <a href="" class="social-contact__link" lang="en">Facebook</a>
-                        </li>
-                        <li class="social-contact__item">
-                            <a href="" class="social-contact__link" lang="en">LinkedIn</a>
-                        </li>
-                    </ul>
+                    <div class="contacts">
+                        <ul class="header-contact list">
+                            <li class="header-contact__item">
+                                <a href="mailto:info@devstudio.com" class="header-contact__link-mail">
+                                    <svg class="header-contact__icon-mail">
+                                        <use href="./images/icons.svg#mail"></use>
+                                    </svg>
+                                    info@devstudio.com
+                                </a>
+                            </li>
+                            <li class="header-contact__item">
+                                <a href="tel:+380961111111" class="header-contact__link-tel">
+                                    <svg class="header-contact__icon-tel">
+                                        <use href="./images/icons.svg#tel"></use>
+                                    </svg>
+                                    +38 096 111 11 11
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="social-contact list">
+                            <li class="social-contact__item">
+                                <a href="" class="social-contact__link" lang="en">Instagram</a>
+                            </li>
+                            <li class="social-contact__item">
+                                <a href="" class="social-contact__link" lang="en">Twitter</a>
+                            </li>
+                            <li class="social-contact__item">
+                                <a href="" class="social-contact__link" lang="en">Facebook</a>
+                            </li>
+                            <li class="social-contact__item">
+                                <a href="" class="social-contact__link" lang="en">LinkedIn</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </div>
